feat: add board feed filters
